# peerforate

./: .gitignore  dune-project  flake.nix  wg8.conf
client/: bpf_filter.c  bpf_filter.ml  config.ml  config.mli  dune  fetch_peer.ml  main.ml  tofu.ml  tofu.mli  traffic_mon.ml  traffic_mon.mli  wgctrl.ml  wgctrl.mli
client/ebpf/: dune  packet_filter.bpf.c  packet_filter.h  packet_filter.ml  vmlinux.h
client/traffic_hook/: dune  packet_filter.bpf.c  packet_filter.h  packet_filter.ml  packet_filter_blocking.ml  packet_filter_eio.ml  traffic_hook.ml  traffic_hook.mli  vmlinux.h
dns/: client.ml  client.mli  client_example.ml  client_functor_example.ml  dnslib.ml  dune  server.ml  server.mli  server_example.ml  server_new.ml  utils.ml
lib/: config_files.ml  config_files.mli  crypto.ml  dune  reply.ml  request.ml  request.mli  wg_nat.ml
server/: auth.ml  auth.mli  client_map.ml  client_map.mli  config.ml  config.mli  dune  main.ml
test/: dune
wglib/: device.ml  device.mli  dune  socket.ml  wgapi.ml  wgapi.mli  wireguard.ml
