(executable
 (public_name peerforate-client)
 (name main)
 (modules main tofu)
 (libraries wg_nat core core_unix wglib bpf_filter dnslib eio eio_main)
 (preprocess
  (pps ppx_cstruct ppx_jane)))

(library
 (name bpf_filter)
 (modules bpf_filter)
 (foreign_stubs
  (language c)
  (names bpf_filter)
  (flags -Wno-unused-variable))
 (libraries ctypes ctypes.foreign core_unix))
