(library
 (name dnslib)
 (modules client dnslib server utils)
 (libraries
  core
  eio
  eio_main
  dns
  dns-server
  domain-name
  logs
  cstruct
  ptime
  ptime.clock.os
  mirage-crypto-rng
  mirage-crypto-rng.unix
  ipaddr
  wg_nat))

(executable
 (name server_example)
 (modules server_example)
 (libraries dnslib))
