(library
 (name dnslib)
 (modules client dnslib server utils)
 (libraries
  core
  eio
  eio_main
  dns
  dns-server
  dns-resolver
  dns-client
  domain-name
  logs
  cstruct
  ptime
  ptime.clock.os
  mirage-crypto-rng
  mirage-crypto-rng.unix
  ipaddr
  wg_nat))

(executable
 (name server_example)
 (modules server_example)
 (libraries dnslib))

(executable
 (name client_example)
 (modules client_example)
 (libraries dnslib))

(executable
 (name client_functor_example)
 (modules client_functor_example)
 (libraries dnslib))
